# simple-graph

./: .gitignore  CMakeLists.txt  README.md  generate.c  generate.h  graph.c  graph_node.c  graph_node.h  graph_read.h  lab_1  main.c
data/: test  test_bigger
src/: graph.c  graph.h  graph_dfs.c  graph_dfs.h  graph_generate.c  graph_generate.h  graph_node.c  graph_read.c  linked_list.c  linked_list.h  main.c  main_read.c  run_tests.c  stack.c  stack.h
src/alternative/: alt_graph_dfs.c  alt_graph_dfs.h
src/tests/: include.h  test_graph.c  test_graph.h  test_graph_dfs.c  test_graph_dfs.h  test_graph_generate.c  test_graph_generate.h  test_graph_node.c  test_graph_node.h  test_graph_read.c  test_graph_read.h  test_linked_list.c  test_linked_list.h  test_stack.c  test_stack.h
